@@ -388,7 +388,8 @@ static void gtk_imhtml_size_allocate(GtkWidget *widget, GtkAllocation *alloc)
 	parent_size_allocate(widget, alloc);
 	
 	/* Don't scroll here if we're in the middle of a smooth scroll */
-	if (scroll && imhtml->scroll_time == NULL)
+	if (scroll && imhtml->scroll_time == NULL &&
+ 	    GTK_WIDGET_REALIZED(imhtml)) 
 		gtk_imhtml_scroll_to_end(imhtml, FALSE);	
 }
 
@@ -2153,8 +2154,9 @@ gtk_imhtml_get_html_opt (gchar       *tag,
 			ret = g_string_append(ret, c);
 			e += len;
 		} else {
-			ret = g_string_append_c(ret, *e);
-			e++;
+			gunichar uni = g_utf8_get_char(e);
+			ret = g_string_append_unichar(ret, uni);
+			e = g_utf8_next_char(e);
 		}
 	}
 
