@@ -1,11 +1,14 @@
 Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul
 
 version 2.1.1 (??/??/????):
-	libpurple:
+	Yahoo:
 	* Added an account action to open your inbox in the yahoo prpl.
 	* Added support for Unicode status messages in Yahoo.
 	* Server-stored aliases for Yahoo. (John Moody)
 	* Fixed support for Yahoo! doodling.
+	* Support for MSN Messenger contacts
+	
+	Bonjour:
 	* Bonjour plugin uses native Avahi instead of Howl
 	* Bonjour plugin supports Buddy Icons
 
@@ -14,6 +17,11 @@ version 2.1.1 (??/??/????):
 	  the toolbar
 	* Slim new redesign of conversation tabs to maximize number of
 	  conversations that can fit in a window
+	* Tab bar is not visible when only one conversation is open. You can
+	  drag and drop conversations from the infopane.
+	* Moved "Reset Formatting" toolbar button to Font menu.
+	* Double click on the infopane to alias buddies and set topics
+	  on chats
 
 	Finch:
 	* Sound support (Eric Polino)
